--- a/styles/twdu.css
+++ b/styles/twdu.css
@@ -55,6 +55,17 @@
   --fa-display: inherit;
 }
 
+.sidebar {
+  float: left;
+  color: hsl(0, 0%, 100%);
+  width: 60%;
+  background: hsl(57, 15%, 26%);
+  padding-block: 1rem;
+  padding-left: 1.2rem;
+  padding-right: 2rem;
+  margin-inline: 0.5rem;
+}
+
 .directory .directory-header .header-search input {
   color: hsl(57, 15%, 26%);
 }
